Se modificar footer con clases en bootstrap

--- a/pages/ayudanos.html
+++ b/pages/ayudanos.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="shortcut icon" href="../images/favicon/favicon.ico" type="image/x-icon">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,6 +38,87 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="donate-info">
+            <section class="donate-content">
+                <h2>Dona a nuestro Refugio Animal</h2>
+                <p>Todas las donaciones serán destinadas para el cuidado de nuestros animales rescatados</p>
+            </section>
+            <div class="donate-img">
+                <img src="../images/donate-section/dogs.png" alt="perros">
+            </div>
+        </div>
+
+        <section class="news__container">
+            <!-- News section-->
+            <div class="title--news">
+                <h2>Donaciones</h2>
+                <p>
+                    Agradecemos mucho tu ayuda!
+                </p>
+            </div>
+
+            <div class="content--news"> <!--Box 1 -->
+                <div class="box--news">
+                    <div class="text--content">
+                        <h3>$100</h3>
+                        <p>
+                            Donar al refugio patitas en accion!
+                        </p>
+                        <div class="button-donate">
+                            <input type="button" value="Donar ahora">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="content--news"> <!--Box 2 -->
+                <div class="box--news">
+                    <div class="text--content">
+                        <h3>$200</h3>
+                        <p>
+                            Donar al refugio patitas en accion!
+                        </p>
+                        <div class="button-donate">
+                            <input type="button" value="Donar ahora">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="content--news"> <!--Box 3 -->
+                <div class="box--news">
+                    <div class="text--content">
+                        <h3>$300</h3>
+                        <p>
+                            Donar al refugio patitas en accion!
+                        </p>
+                        <div class="button-donate">
+                            <input type="button" value="Donar ahora">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container-footer">
+            <section class="footer-title">
+                <p>© 2021 Federico Antonelli, All rights reserved.</p>
+            </section>
+            <section class="social-media">
+                <a href="#" class="links" target="_BLANK">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="#" class="links" target="_BLANK">
+                    <i class="fab fa-facebook-square"></i>
+                </a>
+                <a href="#" class="links" target="_BLANK">
+                    <i class="fas fa-globe-americas"></i>
+                </a>
+            </section>
+        </div>
+    </footer>
+
     <script src="../scripts/main.js"></script>
 </body>
 </html>
