Se modifica footer en todas las pages

--- a/pages/ayudanos.html
+++ b/pages/ayudanos.html
@@ -103,7 +103,7 @@
     <footer>
         <div class="container-footer">
             <section class="footer-title">
-                <p>© 2021 Federico Antonelli, All rights reserved.</p>
+                <p>&copy; 2022 Alexis Aguilar, All Rights Reserved.</p>
             </section>
             <section class="social-media">
                 <a href="#" class="links" target="_BLANK">
