Se modifica contenido en page ayudanos, se eliminan imagenes usadas en footer

--- a/pages/ayudanos.html
+++ b/pages/ayudanos.html
@@ -41,29 +41,29 @@
     <main>
         <div class="donate-info">
             <section class="donate-content">
-                <h2>Dona a nuestro Refugio Animal</h2>
-                <p>Todas las donaciones serán destinadas para el cuidado de nuestros animales rescatados</p>
+                <h2>Ayuda a  nuestro refugio para animales sin hogar</h2>
+                <p>Todos los aportes serán destinados para el cuidado de nuestros animales rescatados</p>
             </section>
             <div class="donate-img">
-                <img src="../images/donate-section/dogs.png" alt="perros">
+                <img src="../images/donate-section/charlie_cat2.png" alt="gatos">
             </div>
         </div>
 
         <section class="news__container">
             <!-- News section-->
             <div class="title--news">
-                <h2>Donaciones</h2>
+                <h2>Ayudanos a ayudar</h2>
                 <p>
-                    Agradecemos mucho tu ayuda!
+                    Mirada Animal Agradece tus aportes
                 </p>
             </div>
 
             <div class="content--news"> <!--Box 1 -->
                 <div class="box--news">
                     <div class="text--content">
-                        <h3>$100</h3>
+                        <h3>$2000</h3>
                         <p>
-                            Donar al refugio patitas en accion!
+                            Ayuda al refugio Mirada Animal
                         </p>
                         <div class="button-donate">
                             <input type="button" value="Donar ahora">
@@ -74,9 +74,9 @@
             <div class="content--news"> <!--Box 2 -->
                 <div class="box--news">
                     <div class="text--content">
-                        <h3>$200</h3>
+                        <h3>$5000</h3>
                         <p>
-                            Donar al refugio patitas en accion!
+                            Ayuda al refugio Mirada Animal
                         </p>
                         <div class="button-donate">
                             <input type="button" value="Donar ahora">
@@ -87,9 +87,9 @@
             <div class="content--news"> <!--Box 3 -->
                 <div class="box--news">
                     <div class="text--content">
-                        <h3>$300</h3>
+                        <h3>$10000</h3>
                         <p>
-                            Donar al refugio patitas en accion!
+                            Ayuda al refugio Mirada Animal
                         </p>
                         <div class="button-donate">
                             <input type="button" value="Donar ahora">
