--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="shortcut icon" href="../images/favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,9 +35,78 @@
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
-        <script src="../scripts/main.js"></script>
     </header>
-
-    
+    <main>
+        <div class="container-contact">
+            <section class="contact-title">
+                <h2>Formulario de Contacto</h2>
+            </section>    
+            <form class="contact-form">
+                <div class="contact-row">
+                    <div class="contact-column">
+                        <label>Nombre</label>
+                        <input type="text" placeholder="Ingrese su nombre">
+                    </div>
+                    <div class="contact-column">
+                        <label>Apellido</label>
+                        <input type="text" placeholder="Ingrese su apellido">
+                    </div>
+                </div>
+                <div class="contact-row">
+                    <div class="contact-column">
+                        <label>E-mail</label>
+                        <input type="email" placeholder="Ingrese su e-mail">
+                    </div>
+                    <div class="contact-column">
+                        <label>Teléfono</label> 
+                        <input type="text" placeholder="Ingrese su teléfono">
+                    </div>
+                </div>
+                <div class="contact-row">
+                    <div class="contact-columnarea">
+                        <label>Area de contacto</label>
+                        <select name="">
+                            <option value="donar">Donaciones</option>
+                            <option value="preguntas">Consultas</option>
+                            <option value="voluntario">Ser voluntario</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="contact-row">
+                    <div class="contact-columnarea">
+                        <label for="">Desea dejarnos un comentario?</label>
+                        <textarea placeholder="Ingrese su comentario aqui..."></textarea>
+                    </div>
+                </div>
+                <div class="contact-row">
+                    <div class="contact-columnarea">
+                        <input type="submit" value="Enviar">
+                    </div>
+                </div>
+            </form>
+            <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3330.254663380245!2d-70.58414318523758!3d-33.416604403161244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662cf19163a0393%3A0x70e7d3c6342db44b!2sCruz%20del%20Sur%2C%20Las%20Condes%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1644274614272!5m2!1ses!2scl" width="100%" height="auto" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="container-footer">
+            <section class="footer-title">
+                <p>&copy; 2022 Alexis Aguilar, All Rights Reserved.</p>
+            </section>
+            <section class="social-media">
+                <a href="#" class="links" target="_BLANK">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="#" class="links" target="_BLANK">
+                    <i class="fab fa-facebook-square"></i>
+                </a>
+                <a href="#" class="links" target="_BLANK">
+                    <i class="fas fa-globe-americas"></i>
+                </a>
+            </section>
+        </div>
+    </footer>
+    <script src="../scripts/main.js"></script>
 </body>
 </html>
