Se modifica formulario

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -66,9 +66,11 @@
                     <div class="contact-columnarea">
                         <label>Area de contacto</label>
                         <select name="">
-                            <option value="donar">Donaciones</option>
                             <option value="preguntas">Consultas</option>
+                            <option value="donar">Donaciones</option>
                             <option value="voluntario">Ser voluntario</option>
+                            <option value="apadrinar">Apadrina</option>
+                            <option value="adopta">Adoptar</option>
                         </select>
                     </div>
                 </div>
