Se habilita form para envio de correo y se agregar etiquetas name en form

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,43 +41,43 @@
             <section class="contact-title">
                 <h2>Formulario de Contacto</h2>
             </section>    
-            <form class="contact-form">
+            <form class="contact-form" action="https://formsubmit.co/f894e28c2beabf517ac8d2048a3266a0" method="POST">
                 <div class="contact-row">
                     <div class="contact-column">
                         <label>Nombre</label>
-                        <input type="text" placeholder="Ingrese su nombre">
+                        <input type="text" name="nombre" placeholder="Ingrese su nombre">
                     </div>
                     <div class="contact-column">
                         <label>Apellido</label>
-                        <input type="text" placeholder="Ingrese su apellido">
+                        <input type="text" name="apellido" placeholder="Ingrese su apellido">
                     </div>
                 </div>
                 <div class="contact-row">
                     <div class="contact-column">
                         <label>E-mail</label>
-                        <input type="email" placeholder="Ingrese su e-mail">
+                        <input type="email" name="email" placeholder="Ingrese su e-mail">
                     </div>
                     <div class="contact-column">
                         <label>Teléfono</label> 
-                        <input type="text" placeholder="Ingrese su teléfono">
+                        <input type="text" name="telefono" placeholder="Ingrese su teléfono">
                     </div>
                 </div>
                 <div class="contact-row">
                     <div class="contact-columnarea">
                         <label>Area de contacto</label>
-                        <select name="">
-                            <option value="preguntas">Consultas</option>
-                            <option value="donar">Donaciones</option>
-                            <option value="voluntario">Ser voluntario</option>
-                            <option value="apadrinar">Apadrina</option>
-                            <option value="adopta">Adoptar</option>
+                        <select name="combo">
+                            <option value="Consultas">Consultas</option>
+                            <option value="Donaciones">Donaciones</option>
+                            <option value="Voluntariado">Ser voluntario</option>
+                            <option value="Apadrinar">Apadrina</option>
+                            <option value="Adopcion">Adoptar</option>
                         </select>
                     </div>
                 </div>
                 <div class="contact-row">
                     <div class="contact-columnarea">
                         <label for="">Desea dejarnos un comentario?</label>
-                        <textarea placeholder="Ingrese su comentario aqui..."></textarea>
+                        <textarea name="comentario" placeholder="Ingrese su comentario aqui..."></textarea>
                     </div>
                 </div>
                 <div class="contact-row">
